# multicode

./: README.md  config.codex.yml  config.toml
.github/workflows/: build-multicode-remote.yml
apple-container/: Containerfile  build-local.sh
lib/: Cargo.toml  build.rs
lib/src/: lib.rs  manager.rs
lib/src/services/: automation_state_file_service.rs  autonomous_workspace_service.rs  codex_app_server.rs  codex_root_session_service.rs  combined.rs  config.rs  github_status_service.rs  mod.rs  multicode_metadata_service.rs  opencode_client_service.rs  persistent_storage.rs  resource_usage_service.rs  root_session_service.rs  runtime.rs  runtime_reconciliation_service.rs  transient_storage.rs  usage_aggregation_service.rs
lib/tests/: apple_container_runtime_integration.rs
remote/src/: orchestration.rs
remote/tests/: docker_remote_integration.rs
tui/: Cargo.toml
tui/src/: app.rs  icons.rs  main.rs  ops.rs  render.rs  tests.rs
workspace-skills/autonomous-state/: SKILL.md
workspace-skills/git-commit-coauthorship/: SKILL.md
workspace-skills/independent-fix/: SKILL.md
workspace-skills/machine-readable-pr/: SKILL.md
workspace-skills/micronaut-projects-guide/: SKILL.md
